# llm-proxy-biteagle

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bat  docker-compose.yml
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/: ChatWindow.tsx  MarkdownRenderer.tsx  ReasoningBlock.tsx  Sidebar.tsx
frontend/src/hooks/: useConversations.ts  useModels.ts  useSSE.ts
include/: httplib.h
src/: main.cpp
